[package]
name = "rocky"
version = "0.1.0"
edition = "2021"

[dependencies]
# Servidor web asíncrono y enrutamiento
tokio = { version = "1.35", features = ["full"] }
axum = "0.7.4"
hyper = "1.1"

# Caché de alto rendimiento para los baneos
moka = { version = "0.12.5", features = ["future"] }

# Rate limiting de alta eficiencia
governor = "0.6.3"
dashmap = "5.5.3"

# Serialización de configuración
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Cliente HTTP para el proxy inverso
reqwest = { version = "0.12", features = ["stream"] }

# Utilidades
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http-body-util = "0.1.3"
tower-http = { version = "0.6.8", features = ["trace", "catch-panic"] }
